--- a/src/main.scss
+++ b/src/main.scss
@@ -30,6 +30,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-grow: 1;
 }
 
 .isi {
@@ -41,6 +42,7 @@ body {
   align-items: center;
   gap: 0.5em;
   width: 100%;
+  order: 0;
 }
 
 h1, h2 {
@@ -125,14 +127,13 @@ h2 {
   gap: 30px;
 
   h3 {
-    margin: 0px 0 10px 0;
+    margin: 0 0 10px 0;
     text-align: center;
     color: white;
     width: 100%;
   }
 
   .images-container {
-    margin-top: -5px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -179,6 +180,7 @@ h2 {
     ul {
         padding-left: 20px;
         margin-top: 5px;
+        margin-bottom: 5px;
     }
   }
 }
@@ -190,6 +192,7 @@ h2 {
   display: flex;
   gap: 10px;
   z-index: 10;
+  order: 1;
 
   .icon {
     position: relative;
@@ -273,13 +276,13 @@ h2 {
           flex-direction: column;
           gap: 15px;
           align-items: center;
+          width: 100%;
       }
 
       .text-experience,
       .text-abilities {
           flex: none;
           width: 100%;
-          max-width: 450px;
           text-align: left;
           padding: 12px;
       }
@@ -290,12 +293,22 @@ h2 {
   }
 
   .top-right-icons {
-      top: 10px;
-      right: 10px;
-      gap: 8px;
+      position: static;
+      order: 2;
+      width: 100%;
+      justify-content: center;
+      gap: 15px;
+      margin-top: 30px;
+      margin-bottom: 20px;
+      padding: 10px 0;
+
       .icon {
-          width: 30px;
-          height: 30px;
+          width: 26px;
+          height: 26px;
+
+          &::after {
+              display: none;
+          }
       }
   }
 }
@@ -314,12 +327,13 @@ h2 {
      }
 
     .top-right-icons {
-      top: 5px;
-      right: 5px;
-      gap: 5px;
+      gap: 12px;
+      margin-top: 25px;
+      margin-bottom: 15px;
+
        .icon {
-           width: 28px;
-           height: 28px;
+           width: 24px;
+           height: 24px;
        }
     }
 }
